--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "jwt.js",
   "dependencies": {
     "express": "^4.16.2",
-    "jsonwebtoken": "^8.1.1"
+    "jsonwebtoken": "^8.1.1",
+    "node-env-file": "^0.1.8"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" :"node server.js"
-
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC"
