--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,3 +1,4 @@
+# Not currently in-use. Application is deployed to a Heroku dyno.
 apiVersion: v1
 kind: Service
 metadata:
@@ -11,6 +12,12 @@ spec:
     nodePort: 30043
   selector:
     app: smooch-jwt
+# spec:
+#   type: LoadBalancer
+#   ports:
+#   - port: 8080
+#   selector:
+#     app: smooch-jwt
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -34,5 +41,13 @@ spec:
       containers:
       - name: smooch-jwt
         image: gcr.io/zip-zap-gateway/smooch-jwt:latest
+        imagePullPolicy: Always
         ports:
           - containerPort: 8080
+        # readinessProbe:
+        #     httpGet:
+        #         path: /healthz
+        #         port: 8080
+        #     initialDelaySeconds: 10
+        #     periodSeconds: 5
+        #     timeoutSeconds: 5
