--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   },
   "devDependencies": {
     "assert": "1.4.1",
+    "codecov": "^3.0.0",
+    "istanbul": "^0.4.5",
     "mocha": "5.0.1",
     "njwt": "0.4.0",
     "nodeunit": "^0.11.2"
   },
   "scripts": {
     "test": "KEY_ID=app_5a70141be964c6003fe08afc SECRET=hIraqmK_mDq53XembMweqa86 mocha jwt/test.js",
+    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha ./jwt/test.js --report lcovonly -- -R spec && codecov",
     "start": "node server.js"
   },
   "repository": {
