--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jwt",
+  "name": "smooch-jwt",
   "version": "1.0.0",
-  "description": "",
+  "description": "Adds JWT authentication for live chat on indiraactive.com.",
   "main": "jwt.js",
   "dependencies": {
     "body-parser": "1.18.2",
