Add CODECOV_TOKEN env which is required to build Dockerfile locally

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   app:
     build:
       context: .
+      args:
+        - CODECOV_TOKEN=$CODECOV_TOKEN
     image: smooch-jwt
     volumes:
       - .:/app
