--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,9 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=smooch-jwt -t smooch-jwt .
+            docker-compose build
+          #command: |
+            #docker build --cache-from=smooch-jwt -t smooch-jwt .
       - run:
           name: Save Docker image layer cache
           command: |
