--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,12 @@ jobs:
       - checkout
       - setup_remote_docker
       - run:
-          name: Install Docker Compose
+          name: Install CI dependencies
           command: |
-            curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-            chmod +x ~/docker-compose
-            sudo mv ~/docker-compose /usr/local/bin/docker-compose
+            apk add --no-cache \
+              py-pip=9.0.1
+            pip install \
+              docker-compose==1.19.0
       - restore_cache:
           keys:
             - v1-{{ .Branch }}
@@ -27,8 +28,6 @@ jobs:
           name: Build application Docker image
           command: |
             docker-compose build
-          #command: |
-            #docker build --cache-from=smooch-jwt -t smooch-jwt .
       - run:
           name: Save Docker image layer cache
           command: |
