--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           name: Install CI dependencies
           command: |
             apk add --no-cache \
-              py-pip=9.0.1
+              py-pip=9.0.0-r1
             pip install \
               docker-compose==1.19.0
       - restore_cache:
