Simply env variables in all enviorments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,7 @@ services:
       - .:/app
     ports:
       - '8080:8080'
+    environment:
+        - SECRET=$SECRET
+        - KEY_ID=$KEY_ID
     command: npm start
