--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "express": "^4.16.2",
     "jsdoc": "3.5.5",
     "jsonwebtoken": "^8.2.0",
-    "morgan": "1.9.0",
-    "node-env-file": "^0.1.8"
+    "morgan": "1.9.0"
   },
   "devDependencies": {
     "assert": "1.4.1",
