--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "mocha": "5.0.1",
     "njwt": "0.4.0",
     "nodeunit": "^0.11.2",
-    "nyc": "^11.4.1"
+    "nyc": "^11.4.1",
+    "snyk": "^1.70.2"
   },
   "scripts": {
     "test": "KEY_ID=app_5a70141be964c6003fe08afc SECRET=hIraqmK_mDq53XembMweqa86 mocha jwt/test.js",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov > coverage.lcov && codecov -t $CODECOV_TOKEN",
+    "scan": "snyk test",
     "start": "node server.js"
   },
   "repository": {
