Add gcloud step to properly tag and push image to container registry

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,17 +3,23 @@ jobs:
   build:
     working_directory: /build
     docker:
-      - image: docker:17.05.0-ce-git
+      - image: google/cloud-sdk:193.0.0
     steps:
       - checkout
       - setup_remote_docker
       - run:
           name: Install CI dependencies
           command: |
-            apk add --no-cache \
-              py-pip=9.0.0-r1
-            pip install \
-              docker-compose==1.19.0
+            apt-get install python-pip -y
+            pip install docker-compose==1.19.0
+      - run:
+          name: Autenticate gcloud
+          command: |
+            echo $GOOGLE_AUTH | base64 - --decode --ignore-garbage > ${HOME}/gcloud-service-key.json 
+            gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+            gcloud --quiet config set project ${GCLOUD_PROJECT_ID}
+            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
+            #gcloud --quiet container clusters get-credentials ${GOOGLE_CLUSTER_NAME}
       - restore_cache:
           keys:
             - v1-{{ .Branch }}
@@ -29,10 +35,21 @@ jobs:
           command: |
             docker-compose build
       - run:
+          name: Tag and push image to Google Container Registry
+          command: |
+             docker tag gcr.io/${GCLOUD_PROJECT_ID}/smooch-jwt gcr.io/${GCLOUD_PROJECT_ID}/smooch-jwt:$CIRCLE_SHA1
+             docker tag gcr.io/${GCLOUD_PROJECT_ID}/smooch-jwt gcr.io/${GCLOUD_PROJECT_ID}/smooch-jwt:CIRCLE_BUILD_NUM_$CIRCLE_BUILD_NUM
+             docker tag gcr.io/${GCLOUD_PROJECT_ID}/smooch-jwt gcr.io/${GCLOUD_PROJECT_ID}/smooch-jwt:$CIRCLE_BRANCH
+             docker tag gcr.io/${GCLOUD_PROJECT_ID}/smooch-jwt gcr.io/${GCLOUD_PROJECT_ID}/smooch-jwt:latest
+             gcloud docker -- push gcr.io/${GCLOUD_PROJECT_ID}/smooch-jwt:$CIRCLE_SHA1
+             gcloud docker -- push gcr.io/${GCLOUD_PROJECT_ID}/smooch-jwt:CIRCLE_BUILD_NUM_$CIRCLE_BUILD_NUM
+             gcloud docker -- push gcr.io/${GCLOUD_PROJECT_ID}/smooch-jwt:$CIRCLE_BRANCH
+             gcloud docker -- push gcr.io/${GCLOUD_PROJECT_ID}/smooch-jwt:latest
+      - run:
           name: Save Docker image layer cache
           command: |
             mkdir -p /caches
-            docker save -o /caches/app.tar smooch-jwt
+            docker save -o /caches/app.tar gcr.io/zip-zap-gateway/smooch-jwt
       - save_cache:
           key: v1-{{ .Branch }}-{{ epoch }}
           paths:
