--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       cache_from:
-        - smooch-jwt
+        - gcr.io/zip-zap-gateway/smooch-jwt
       args:
         - CODECOV_TOKEN=$CODECOV_TOKEN
     image: gcr.io/zip-zap-gateway/smooch-jwt
